Create Initial Author Routes

--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Library</title>
-  </head>
-  <body>
-    <h1>Before</h1>
-    <br />
-    <%- body %>
-    <br />
-    <h1>After</h1>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>My Library</title>
+    </head>
+    <body>
+        <%- include("../partials/header.ejs") %> <%-
+        include("../partials/errorMessage.ejs") %> <%- body %>
+    </body>
 </html>
